# Task31_2

./: CMakeLists.txt
Task31_2/: CMakeLists.txt  Task31_2.cpp
