# CMakeList.txt: проект CMake для Task31_2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Task31_2 "Task31_2.cpp" )

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
